git-svn-id: https://www.seasar.org/svn/sandbox/s2buri/trunk@45 1c266114-290a-0410-b1ce-a63319e86887

--- a/core/build.xml
+++ b/core/build.xml
@@ -22,6 +22,8 @@
 				<include name="**/*.xml" />
 				<include name="**/*.xpdl" />
 				<include name="**/*.dtd" />
+				<include name="**/*.dicon" />
+				<include name="**/*.sql" />
 				<exclude name="build.xml" />
 			</fileset>
 		</copy>
