--- a/.classpath
+++ b/.classpath
@@ -5,30 +5,8 @@
 	<classpathentry kind="src" path="src/test/java"/>
 	<classpathentry kind="src" path="src/test/resources"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="/s2coffee/lib/aopalliance-1.0.jar"/>
-	<classpathentry kind="lib" path="/s2coffee/lib/commons-logging-1.0.4.jar"/>
-	<classpathentry kind="lib" path="/s2coffee/lib/freemarker.jar"/>
-	<classpathentry kind="lib" path="/s2coffee/lib/geronimo-j2ee_1.4_spec-1.0.jar"/>
-	<classpathentry kind="lib" path="/s2coffee/lib/hsqldb.jar"/>
-	<classpathentry kind="lib" path="/s2coffee/lib/javassist-3.0.jar"/>
-	<classpathentry kind="lib" path="/s2coffee/lib/junit-3.8.1.jar"/>
-	<classpathentry kind="lib" path="/s2coffee/lib/jxl.jar"/>
-	<classpathentry kind="lib" path="/s2coffee/lib/log4j-1.2.8.jar"/>
-	<classpathentry kind="lib" path="/s2coffee/lib/ognl-2.6.5.jar"/>
-	<classpathentry kind="lib" path="/s2coffee/lib/poi-2.5.1-final-20040804.jar"/>
-	<classpathentry kind="lib" path="/s2coffee/lib/postgresql-8.1-404.jdbc3.jar"/>
-	<classpathentry kind="lib" path="/s2coffee/lib/s2-dao-1.0.31.jar"/>
-	<classpathentry kind="lib" path="/s2coffee/lib/s2-dao-1.0.31-sources.jar"/>
-	<classpathentry kind="lib" path="/s2coffee/lib/s2-extension-2.3.7.jar"/>
-	<classpathentry kind="lib" path="/s2coffee/lib/s2-extension-2.3.7-sources.jar"/>
-	<classpathentry kind="lib" path="/s2coffee/lib/s2-framework-2.3.7.jar"/>
-	<classpathentry kind="lib" path="/s2coffee/lib/s2-framework-2.3.7-sources.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/s2coffee"/>
-	<classpathentry kind="lib" path="lib/janino.jar"/>
 	<classpathentry kind="src" path="/s2coffee-script"/>
-	<classpathentry kind="lib" path="C:/java/eclipse3.1/plugins/org.apache.derby.core_10.1.1/derby.jar"/>
-	<classpathentry kind="lib" path="C:/java/eclipse3.1/plugins/org.apache.derby.core_10.1.1/derbyclient.jar"/>
-	<classpathentry kind="lib" path="C:/java/eclipse3.1/plugins/org.apache.derby.core_10.1.1/derbytools.jar"/>
-	<classpathentry kind="lib" path="C:/java/eclipse3.1/plugins/org.apache.derby.core_10.1.1/derbynet.jar"/>
+	<classpathentry kind="con" path="org.maven.ide.eclipse.MAVEN2_CLASSPATH_CONTAINER"/>
 	<classpathentry kind="output" path="classes"/>
 </classpath>
