--- a/src/test/resources/log4j.properties
+++ b/src/test/resources/log4j.properties
@@ -1,13 +1,13 @@
-log4j.category.org.seasar=DEBUG, C, A2
+log4j.category.org.seasar=INFO, C, A2
 log4j.additivity.org.seasar=false
 
-log4j.category.jp.starlogic=DEBUG, C, A2
+log4j.category.jp.starlogic=INFO, C, A2
 log4j.additivity.jp.starlogic=false
 
-log4j.category.freemarker=DEBUG, C, A2
+log4j.category.freemarker=INFO, C, A2
 log4j.additivity.freemarker=false
 
-log4j.category.jp.starlogic.common.janino.util.impl=DEBUG, A2
+log4j.category.jp.starlogic.common.janino.util.impl=INFO, A2
 log4j.additivity.jp.starlogic.common.janino.util.impl=false
 
 log4j.appender.C=org.apache.log4j.ConsoleAppender
