InvokerをProcessorへ修正 Stdタイプは作業中
git-svn-id: https://www.seasar.org/svn/sandbox/s2buri/branches/Buri2.3@94 1c266114-290a-0410-b1ce-a63319e86887

--- a/src/test/resources/log4j.properties
+++ b/src/test/resources/log4j.properties
@@ -1,10 +1,10 @@
 log4j.category.org.seasar=DEBUG, C, A2
 log4j.additivity.org.seasar=false
 
-log4j.category.jp.starlogic=INFO, C, A2
+log4j.category.jp.starlogic=DEBUG, C, A2
 log4j.additivity.jp.starlogic=false
 
-log4j.category.freemarker=INFO, C, A2
+log4j.category.freemarker=DEBUG, C, A2
 log4j.additivity.freemarker=false
 
 log4j.category.jp.starlogic.common.janino.util.impl=DEBUG, A2
