--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,11 @@
       <version>0.2.0-SNAPSHOT</version>
     </dependency>
     <dependency>
+      <groupId>org.seasar.coffee</groupId>
+      <artifactId>s2-coffee</artifactId>
+      <version>0.2.0-SNAPSHOT</version>
+    </dependency>
+    <dependency>
       <groupId>janino</groupId>
       <artifactId>janino</artifactId>
       <version>2.4.3</version>
