--- a/src/test/resources/log4j.properties
+++ b/src/test/resources/log4j.properties
@@ -1,3 +1,9 @@
+log4j.category=INFO, C, A2
+log4j.additivity=false
+
+log4j.category.order=DEBUG, C, A2
+log4j.additivity.order=false
+
 log4j.category.org.seasar=DEBUG, C, A2
 log4j.additivity.org.seasar=false
 
