--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.seasar.buri</groupId>
   <artifactId>s2-buri</artifactId>
-  <version>0.3.0-SNAPSHOT</version>
+  <version>0.3.0-RC1</version>
   <description></description>
   <build>
     <defaultGoal>validate</defaultGoal>
@@ -43,12 +43,12 @@
     <dependency>
       <groupId>org.seasar.coffee</groupId>
       <artifactId>s2-coffee-script</artifactId>
-      <version>0.2.0-SNAPSHOT</version>
+      <version>0.2.0-RC1</version>
     </dependency>
     <dependency>
       <groupId>org.seasar.coffee</groupId>
       <artifactId>s2-coffee</artifactId>
-      <version>0.2.0-SNAPSHOT</version>
+      <version>0.2.0-RC1</version>
     </dependency>
     <dependency>
       <groupId>janino</groupId>
