エンジンの読み込みをStreamと内部形式Objectの両方に対応
git-svn-id: https://www.seasar.org/svn/sandbox/s2buri/trunk@140 1c266114-290a-0410-b1ce-a63319e86887

--- a/Buri2.3/pom.xml
+++ b/Buri2.3/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.seasar.buri</groupId>
   <artifactId>s2-buri</artifactId>
-  <version>0.3.0</version>
+  <version>0.3.1-SNAPSHOT</version>
   <description></description>
   <build>
     <defaultGoal>validate</defaultGoal>
@@ -48,7 +48,7 @@
     <dependency>
       <groupId>org.seasar.coffee</groupId>
       <artifactId>s2-coffee</artifactId>
-      <version>0.2.0</version>
+      <version>0.2.1-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>janino</groupId>
