--- a/Buri2.3/pom.xml
+++ b/Buri2.3/pom.xml
@@ -38,6 +38,11 @@
       <name>The Seasar Foundation Maven2 Repository</name>
       <url>http://maven.seasar.org/maven2</url>
     </repository>
+    <repository>
+      <id>dist.codehaus.org</id>
+      <name>codehaus Maven2 Repository</name>
+      <url>http://dist.codehaus.org/mule/dependencies/maven2/</url>
+    </repository>
   </repositories>
   <dependencies>
     <dependency>
@@ -106,6 +111,12 @@
       <groupId>postgresql</groupId>
       <artifactId>postgresql</artifactId>
       <version>8.1-404.jdbc3</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>oracle</groupId>
+      <artifactId>ojdbc14</artifactId>
+      <version>9.2.0.5</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
