--- a/s2-buri-codegen-extension/pom.xml
+++ b/s2-buri-codegen-extension/pom.xml
@@ -2,7 +2,7 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.seasar.buri</groupId>
-  <artifactId>s2-buri-codegen-extension</artifactId>
+  <artifactId>buri-codegen-extension</artifactId>
   <packaging>jar</packaging>
   <version>1.0-SNAPSHOT</version>
   <name>Maven Quick Start Archetype</name>
