OGNLのエラー出力関係強化
git-svn-id: https://www.seasar.org/svn/sandbox/s2buri/trunk@151 1c266114-290a-0410-b1ce-a63319e86887

--- a/Buri2.3/pom.xml
+++ b/Buri2.3/pom.xml
@@ -48,7 +48,7 @@
     <dependency>
       <groupId>org.seasar.coffee</groupId>
       <artifactId>s2-coffee-script</artifactId>
-      <version>0.2.0</version>
+      <version>0.2.1-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>org.seasar.coffee</groupId>
