なでじゃこ対応済み
git-svn-id: https://www.seasar.org/svn/sandbox/s2buri/trunk@154 1c266114-290a-0410-b1ce-a63319e86887

--- a/Buri2.3/src/test/resources/log4j.properties
+++ b/Buri2.3/src/test/resources/log4j.properties
@@ -16,6 +16,9 @@ log4j.additivity.freemarker=false
 log4j.category.jp.starlogic.common.janino.util.impl=DEBUG, A2
 log4j.additivity.jp.starlogic.common.janino.util.impl=false
 
+log4j.category.org.seasar.buri.compiler=DEBUG, A2
+log4j.category.org.seasar.buri.compiler=false
+
 log4j.appender.C=org.apache.log4j.ConsoleAppender
 log4j.appender.C.Target=System.out
 log4j.appender.C.ImmediateFlush=true
