--- a/Buri2.3/.settings/org.eclipse.jdt.ui.prefs
+++ b/Buri2.3/.settings/org.eclipse.jdt.ui.prefs
@@ -1,3 +1,3 @@
-#Wed May 10 17:42:45 JST 2006
+#Sat Jan 13 18:53:02 JST 2007
 eclipse.preferences.version=1
-internal.default.compliance=user
+internal.default.compliance=default
