--- a/Buri2.3/pom.xml
+++ b/Buri2.3/pom.xml
@@ -47,6 +47,11 @@
   </repositories>
   <dependencies>
     <dependency>
+      <groupId>org.seasar.container</groupId>
+      <artifactId>s2-extension</artifactId>
+      <version>2.4.9</version>
+    </dependency>
+    <dependency>
       <groupId>org.seasar.coffee</groupId>
       <artifactId>s2-coffee-script</artifactId>
       <version>0.2.1-SNAPSHOT</version>
@@ -64,7 +69,7 @@
     <dependency>
       <groupId>org.seasar.dao</groupId>
       <artifactId>s2-dao</artifactId>
-      <version>1.0.34</version>
+      <version>1.0.40</version>
     </dependency>
     <dependency>
       <groupId>geronimo-spec</groupId>
