--- a/s2-buri-codegen-extension/pom.xml
+++ b/s2-buri-codegen-extension/pom.xml
@@ -51,7 +51,7 @@
     <dependency>
       <groupId>org.seasar.buri</groupId>
 	  <artifactId>s2-buri</artifactId>
-      <version>0.3.1-SNAPSHOT</version>
+      <version>0.3.1</version>
     </dependency>
     <dependency>
       <groupId>org.seasar.codegen</groupId>
@@ -61,7 +61,7 @@
     <dependency>
       <groupId>org.seasar.coffee</groupId>
       <artifactId>s2-coffee</artifactId>
-      <version>0.2.1-SNAPSHOT</version>
+      <version>0.2.1</version>
     </dependency>
     <dependency>
       <groupId>geronimo-spec</groupId>
