--- a/Buri2.3/.settings/org.eclipse.core.resources.prefs
+++ b/Buri2.3/.settings/org.eclipse.core.resources.prefs
@@ -1,6 +1,7 @@
-#Mon Feb 19 21:07:43 JST 2007
+#Sat Feb 24 12:37:24 JST 2007
 eclipse.preferences.version=1
 encoding//src/main/resources/buri/dicon/bao.dicon=UTF-8
+encoding//src/main/resources/buri/dicon/buri-extension.dicon=UTF-8
 encoding//src/main/resources/buri/dicon/buri-share.dicon=UTF-8
 encoding//src/main/resources/buri/dicon/buriBase.dicon=UTF-8
 encoding//src/main/resources/buri/dicon/buriSimple.dicon=UTF-8
