--- a/buri-teeda-app/aconv-app/.project
+++ b/buri-teeda-app/aconv-app/.project
@@ -32,5 +32,6 @@
 		<nature>com.sysdeo.eclipse.tomcat.tomcatnature</nature>
 		<nature>org.seasar.dolteng.eclipse.nature</nature>
 		<nature>org.seasar.kijimuna.core.nature</nature>
+		<nature>org.seasar.dblauncher.nature</nature>
 	</natures>
 </projectDescription>
