--- a/buri-teeda-app/aconv-app/.settings/org.seasar.dblauncher.prefs
+++ b/buri-teeda-app/aconv-app/.settings/org.seasar.dblauncher.prefs
@@ -1,3 +1,4 @@
-#Tue Jan 30 12:10:52 JST 2007
-baseDir=/aconv-app/src/main/webapp/WEB-INF/classes/data
+#Sun Feb 25 01:08:45 JST 2007
+baseDir=/aconv-app/db/buri
 eclipse.preferences.version=1
+isDebug=true
