--- a/buri-teeda-app/aconv-app/pom.xml
+++ b/buri-teeda-app/aconv-app/pom.xml
@@ -21,17 +21,17 @@
   	<dependency>
   		<groupId>org.seasar.container</groupId>
   		<artifactId>s2-framework</artifactId>
-  		<version>2.4.8</version>
+  		<version>2.4.10</version>
   	</dependency>
   	<dependency>
   		<groupId>org.seasar.container</groupId>
   		<artifactId>s2-extension</artifactId>
-  		<version>2.4.8</version>
+  		<version>2.4.10</version>
   	</dependency>
   	<dependency>
   		<groupId>org.seasar.container</groupId>
   		<artifactId>s2-tiger</artifactId>
-  		<version>2.4.8</version>
+  		<version>2.4.10</version>
   	</dependency>
 
 	<!-- S2Container Needs Dependencies -->
@@ -71,22 +71,27 @@
       <artifactId>postgresql</artifactId>
       <version>8.2-504.jdbc3</version>
     </dependency>
+    <dependency>
+      <groupId>com.h2database</groupId>
+      <artifactId>h2</artifactId>
+      <version>1.0.20061217</version>
+    </dependency>
 
 	<!-- teeda -->
     <dependency>
       <groupId>org.seasar.teeda</groupId>
       <artifactId>teeda-core</artifactId>
-      <version>1.0.3</version>
+      <version>1.0.4</version>
     </dependency>
     <dependency>
       <groupId>org.seasar.teeda</groupId>
       <artifactId>teeda-extension</artifactId>
-      <version>1.0.3</version>
+      <version>1.0.4</version>
     </dependency>
     <dependency>
       <groupId>org.seasar.teeda</groupId>
       <artifactId>teeda-tiger</artifactId>
-      <version>1.0.3</version>
+      <version>1.0.4</version>
     </dependency>
 
 	<!-- teeda Needs Dependencies -->
@@ -107,8 +112,18 @@
     <dependency>
       <groupId>org.seasar.buri</groupId>
       <artifactId>s2-buri</artifactId>
-      <version>0.3.1-SNAPSHOT</version>
+      <version>0.3.1</version>
     </dependency>	
+    <dependency>
+      <groupId>org.seasar.coffee</groupId>
+      <artifactId>s2-coffee</artifactId>
+      <version>0.2.1</version>
+    </dependency>	
+    <dependency>
+      <groupId>org.seasar.coffee</groupId>
+      <artifactId>s2-coffee-script</artifactId>
+      <version>0.2.1</version>
+    </dependency>
 
 	<!-- Application Use Library -->
     <dependency>
@@ -162,5 +177,66 @@
     	</testResource>
     </testResources>
   </build>
+
+  <properties>
+  	<jdbc_driver>org.h2.Driver</jdbc_driver>
+<!--
+  	<jdbc_url>jdbc:h2:C:/Users/taktak/workspace/aconv-app/db/buri/buriDB;create=true</jdbc_url>
+-->
+	<jdbc_dbms>jdbc:h2:</jdbc_dbms>
+	<jdbc_url>/src/main/webapp/db/buri/buriDB;create=true</jdbc_url>
+  	<jdbc_userid>buri</jdbc_userid>
+  	<jdbc_password>buriburi</jdbc_password>
+  </properties>
+
+  <profiles>
+  	<profile>
+  		<id>integration-test-on-application</id>
+  		<activation>
+  			<property>
+  				<name>env</name>
+  				<value>it</value>
+  			</property>
+  		</activation>
+		<build>
+			<finalName>aconv-app</finalName>
+			<defaultGoal>verify</defaultGoal>
+			<plugins>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-antrun-plugin</artifactId>
+					<executions>
+						<execution>
+							<id>prepare-db</id>
+							<phase>pre-integration-test</phase>
+							<configuration>
+								<tasks>
+									<sequential>
+										<sql driver="${jdbc_driver}" url="${jdbc_dbms}${basedir}${jdbc_url}" userid="${jdbc_userid}" password="${jdbc_password}" onerror="continue">
+											<classpath refid="maven.plugin.classpath"/>
+											<fileset dir="${basedir}">
+												<include name="db/sql/*.sql"/>
+											</fileset>
+										</sql>
+									</sequential>
+								</tasks>
+							</configuration>
+							<goals>
+								<goal>run</goal>
+							</goals>
+						</execution>
+					</executions>
+					<dependencies>
+						<dependency>
+							<groupId>com.h2database</groupId>
+							<artifactId>h2</artifactId>
+							<version>1.0.20061217</version>
+						</dependency>
+					</dependencies>
+				</plugin>
+			</plugins>
+		</build>
+  	</profile>
+  </profiles>
 
 </project>
