なでじゃこのテストをダミーに置き換え
git-svn-id: https://www.seasar.org/svn/sandbox/s2buri/trunk@180 1c266114-290a-0410-b1ce-a63319e86887

--- a/Buri2.3/pom.xml
+++ b/Buri2.3/pom.xml
@@ -125,6 +125,18 @@
       <version>9.2.0.5</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.seasar.nadejako</groupId>
+      <artifactId>nadejako</artifactId>
+      <version>0.7-SNAPSHOT</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.seasar.nadejako</groupId>
+      <artifactId>s2-nadejako</artifactId>
+      <version>0.7-SNAPSHOT</version>
+      <scope>provided</scope>
+    </dependency>
   </dependencies>
   <distributionManagement>
     <repository>
