pom.xmlをサーバに併せて修正
git-svn-id: https://www.seasar.org/svn/sandbox/s2buri/trunk@182 1c266114-290a-0410-b1ce-a63319e86887

--- a/Buri2.3/pom.xml
+++ b/Buri2.3/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.seasar.buri</groupId>
   <artifactId>s2-buri</artifactId>
-  <version>0.3.2-SNAPSHOT</version>
+  <version>0.3.1</version>
   <description></description>
   <build>
     <defaultGoal>validate</defaultGoal>
@@ -32,6 +32,12 @@
         </executions>
       </plugin>
     </plugins>
+   <extensions>
+     <extension>
+       <groupId>org.apache.maven.wagon</groupId>
+       <artifactId>wagon-webdav</artifactId>
+     </extension>
+   </extensions>
   </build>
   <repositories>
     <repository>
@@ -159,12 +165,18 @@
       <scope>provided</scope>
     </dependency>
   </dependencies>
-  <distributionManagement>
-    <repository>
-      <uniqueVersion>false</uniqueVersion>
-      <id>maven.seasar.org</id>
-      <name>The Seasar Foundation Maven2 Repository</name>
-      <url>scp://www.seasar.org/home/groups/sandbox/s2buri/maven/maven2</url>
-    </repository>
-  </distributionManagement>
-</project>
+   <distributionManagement>
+     <repository>
+       <uniqueVersion>false</uniqueVersion>
+       <id>maven.seasar.org</id>
+       <name>The Seasar Foundation Maven2 Repository</name>
+       <url>dav:https://www.seasar.org/maven/maven2</url>
+     </repository>
+     <snapshotRepository>
+       <uniqueVersion>true</uniqueVersion>
+       <id>maven.seasar.org</id>
+       <name>The Seasar Foundation Maven2 Snapshot Repository</name>
+       <url>dav:https://www.seasar.org/maven/maven2-snapshot</url>
+     </snapshotRepository>
+   </distributionManagement>
+ </project>
