--- a/Buri2.3/.project
+++ b/Buri2.3/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Buri2.3_work</name>
+	<name>Buri2.3</name>
 	<comment></comment>
 	<projects>
 	</projects>
