S2Dao-Tigerを追加。 定数アノテーションとTigerアノテーション共存のためS2Daoのバージョンを1.0.41にUP テスト中...
git-svn-id: https://www.seasar.org/svn/sandbox/s2buri/trunk@209 1c266114-290a-0410-b1ce-a63319e86887

--- a/Buri2.3/pom.xml
+++ b/Buri2.3/pom.xml
@@ -31,7 +31,7 @@
           </execution>
         </executions>
       </plugin>
-      <!-- 
+      <!--
        [SQLを簡単にderbyに流すための暫定手段(by nobeans)]
         下のコメントをはずして、mvn process-test-resourcesを実行するとdb/buri配下にderbyのデータが
         作成されます。既存のデータがあっても大丈夫だと思います。
@@ -144,7 +144,12 @@
     <dependency>
       <groupId>org.seasar.dao</groupId>
       <artifactId>s2-dao</artifactId>
-      <version>1.0.40</version>
+      <version>1.0.41</version>
+    </dependency>
+    <dependency>
+      <groupId>org.seasar.dao</groupId>
+      <artifactId>s2-dao-tiger</artifactId>
+      <version>1.0.41</version>
     </dependency>
     <dependency>
       <groupId>geronimo-spec</groupId>
