--- a/Buri2.3/pom.xml
+++ b/Buri2.3/pom.xml
@@ -100,6 +100,13 @@
         </executions>
       </plugin>
 -->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-assembly-plugin</artifactId>
+        <configuration>
+          <descriptor>src\main\assembly\executable.xml</descriptor>
+        </configuration>
+      </plugin>
     </plugins>
    <extensions>
      <extension>
