サンプル修正 WARファイルのデプロイで動作確認(tomcat5.5.23)
git-svn-id: https://www.seasar.org/svn/sandbox/s2buri/trunk@215 1c266114-290a-0410-b1ce-a63319e86887

--- a/teeda-buri-app/study-buri/pom.xml
+++ b/teeda-buri-app/study-buri/pom.xml
@@ -258,7 +258,7 @@
 										<sql driver="${jdbc_driver}" url="${jdbc_dbms}${basedir}${jdbc_url}" userid="${jdbc_userid}" password="${jdbc_password}" onerror="continue">
 											<classpath refid="maven.plugin.classpath"/>
 											<fileset dir="${basedir}">
-												<include name="db/sql/*.sql"/>
+												<include name="db/sql/h2/*.sql"/>
 											</fileset>
 										</sql>
 									</sequential>
