--- a/Buri2.3/pom.xml
+++ b/Buri2.3/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.seasar.buri</groupId>
   <artifactId>s2-buri</artifactId>
-  <version>0.3.2</version>
+  <version>0.3.3-SNAPSHOT</version>
   <description></description>
   <build>
     <defaultGoal>validate</defaultGoal>
