プロジェクト名を修正した。
git-svn-id: https://www.seasar.org/svn/sandbox/s2buri/trunk@231 1c266114-290a-0410-b1ce-a63319e86887

--- a/Buri2.3/.project
+++ b/Buri2.3/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Buri2.3-work</name>
+	<name>escafeFlow</name>
 	<comment></comment>
 	<projects>
 	</projects>
