--- a/Buri2.3/pom.xml
+++ b/Buri2.3/pom.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?><project>
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.escafe.buri</groupId>
-  <artifactId>s2-buri</artifactId>
-  <version>0.3.3-SNAPSHOT</version>
+  <artifactId>buri-core</artifactId>
+  <version>0.4.0-SNAPSHOT</version>
   <description></description>
   <build>
     <defaultGoal>validate</defaultGoal>
