--- a/Buri2.3/.project
+++ b/Buri2.3/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>escafeFlow</name>
+	<name>Buri2.3</name>
 	<comment></comment>
 	<projects>
 	</projects>
@@ -30,6 +30,16 @@
 			<arguments>
 			</arguments>
 		</buildCommand>
+		<buildCommand>
+			<name>org.seasar.s2daoplugin.cachebuilder</name>
+			<arguments>
+			</arguments>
+		</buildCommand>
+		<buildCommand>
+			<name>org.seasar.s2daoplugin.sqlmarkerbuilder</name>
+			<arguments>
+			</arguments>
+		</buildCommand>
 	</buildSpec>
 	<natures>
 		<nature>org.eclipse.jdt.core.javanature</nature>
@@ -37,5 +47,7 @@
 		<nature>org.seasar.kijimuna.core.nature</nature>
 		<nature>com.atlassw.tools.eclipse.checkstyle.CheckstyleNature</nature>
 		<nature>org.apache.derby.ui.derbyEngine</nature>
+		<nature>org.seasar.s2daoplugin.cachenature</nature>
+		<nature>org.seasar.s2daoplugin.s2daonature</nature>
 	</natures>
 </projectDescription>
