git-svn-id: https://www.seasar.org/svn/sandbox/s2buri/trunk@303 1c266114-290a-0410-b1ce-a63319e86887

--- a/Buri2.3/pom.xml
+++ b/Buri2.3/pom.xml
@@ -331,6 +331,7 @@
       <groupId>com.h2database</groupId>
       <artifactId>h2</artifactId>
       <version>1.0.20070617</version>
+      <scope>test</scope>
     </dependency>
   </dependencies>
 
