--- a/Buri2.3/.project
+++ b/Buri2.3/.project
@@ -1,53 +1,37 @@
-<?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Buri2.3</name>
-	<comment></comment>
-	<projects>
-	</projects>
-	<buildSpec>
-		<buildCommand>
-			<name>org.maven.ide.eclipse.maven2Builder</name>
-			<arguments>
-			</arguments>
-		</buildCommand>
-		<buildCommand>
-			<name>org.seasar.kijimuna.core.validator</name>
-			<arguments>
-			</arguments>
-		</buildCommand>
-		<buildCommand>
-			<name>org.seasar.kijimuna.core.builder</name>
-			<arguments>
-			</arguments>
-		</buildCommand>
-		<buildCommand>
-			<name>org.eclipse.jdt.core.javabuilder</name>
-			<arguments>
-			</arguments>
-		</buildCommand>
-		<buildCommand>
-			<name>com.atlassw.tools.eclipse.checkstyle.CheckstyleBuilder</name>
-			<arguments>
-			</arguments>
-		</buildCommand>
-		<buildCommand>
-			<name>org.seasar.s2daoplugin.cachebuilder</name>
-			<arguments>
-			</arguments>
-		</buildCommand>
-		<buildCommand>
-			<name>org.seasar.s2daoplugin.sqlmarkerbuilder</name>
-			<arguments>
-			</arguments>
-		</buildCommand>
-	</buildSpec>
-	<natures>
-		<nature>org.eclipse.jdt.core.javanature</nature>
-		<nature>org.maven.ide.eclipse.maven2Nature</nature>
-		<nature>org.seasar.kijimuna.core.nature</nature>
-		<nature>com.atlassw.tools.eclipse.checkstyle.CheckstyleNature</nature>
-		<nature>org.apache.derby.ui.derbyEngine</nature>
-		<nature>org.seasar.s2daoplugin.cachenature</nature>
-		<nature>org.seasar.s2daoplugin.s2daonature</nature>
-	</natures>
+  <name>buri-core</name>
+  <comment></comment>
+  <projects/>
+  <buildSpec>
+    <buildCommand>
+      <name>org.maven.ide.eclipse.maven2Builder</name>
+    </buildCommand>
+    <buildCommand>
+      <name>org.seasar.kijimuna.core.validator</name>
+    </buildCommand>
+    <buildCommand>
+      <name>org.seasar.kijimuna.core.builder</name>
+    </buildCommand>
+    <buildCommand>
+      <name>org.eclipse.jdt.core.javabuilder</name>
+    </buildCommand>
+    <buildCommand>
+      <name>com.atlassw.tools.eclipse.checkstyle.CheckstyleBuilder</name>
+    </buildCommand>
+    <buildCommand>
+      <name>org.seasar.s2daoplugin.cachebuilder</name>
+    </buildCommand>
+    <buildCommand>
+      <name>org.seasar.s2daoplugin.sqlmarkerbuilder</name>
+    </buildCommand>
+  </buildSpec>
+  <natures>
+    <nature>org.eclipse.jdt.core.javanature</nature>
+    <nature>org.maven.ide.eclipse.maven2Nature</nature>
+    <nature>org.seasar.kijimuna.core.nature</nature>
+    <nature>com.atlassw.tools.eclipse.checkstyle.CheckstyleNature</nature>
+    <nature>org.apache.derby.ui.derbyEngine</nature>
+    <nature>org.seasar.s2daoplugin.cachenature</nature>
+    <nature>org.seasar.s2daoplugin.s2daonature</nature>
+  </natures>
 </projectDescription>
