メールの送信処理自体は出来た。属性のFreeMarker変換、メールへの設定はまだ。
git-svn-id: https://www.seasar.org/svn/sandbox/s2buri/trunk@397 1c266114-290a-0410-b1ce-a63319e86887

--- a/Buri2.3/pom.xml
+++ b/Buri2.3/pom.xml
@@ -334,6 +334,17 @@
       <version>1.0.20070617</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+    	<groupId>org.seasar.mai</groupId>
+    	<artifactId>s2mai</artifactId>
+    	<version>0.9.6-SNAPSHOT</version>
+    	<exclusions>
+    		<exclusion>
+    			<groupId>freemarker</groupId>
+    			<artifactId>freemarker</artifactId>
+    		</exclusion>
+    	</exclusions>
+    </dependency>
   </dependencies>
 
    <distributionManagement>
